Updated for CCRMA

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Oct23_v2.loader.js";
+      var loaderUrl = buildUrl + "/Oct 24.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Oct23_v2.data",
-        frameworkUrl: buildUrl + "/Oct23_v2.framework.js",
-        codeUrl: buildUrl + "/Oct23_v2.wasm",
+        dataUrl: buildUrl + "/Oct 24.data",
+        frameworkUrl: buildUrl + "/Oct 24.framework.js",
+        codeUrl: buildUrl + "/Oct 24.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "RCE",
