--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Oct 26.loader.js";
+      var loaderUrl = buildUrl + "/OCt 26_V2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Oct 26.data",
-        frameworkUrl: buildUrl + "/Oct 26.framework.js",
-        codeUrl: buildUrl + "/Oct 26.wasm",
+        dataUrl: buildUrl + "/OCt 26_V2.data",
+        frameworkUrl: buildUrl + "/OCt 26_V2.framework.js",
+        codeUrl: buildUrl + "/OCt 26_V2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "RCE",
