Fixed element button bug

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Oct 26_V3.loader.js";
+      var loaderUrl = buildUrl + "/Oct26_V3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Oct 26_V3.data",
-        frameworkUrl: buildUrl + "/Oct 26_V3.framework.js",
-        codeUrl: buildUrl + "/Oct 26_V3.wasm",
+        dataUrl: buildUrl + "/Oct26_V3.data",
+        frameworkUrl: buildUrl + "/Oct26_V3.framework.js",
+        codeUrl: buildUrl + "/Oct26_V3.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "RCE",
